--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -1,6 +1,5 @@
 {
       "folder_id": "b1gtppfap19rcjbm2f9r",
       "sa_key_file": "key.json",
-      "source_image_id": "reddit-mini",
-      "subnet_id": "e9bc6g949kntuh0bp9uv"
+      "source_image_id": "reddit-mini"
 }
