--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 packer/variables.json
-*.tfstate
-*.tfstate.*.backup
-*.tfstate.backup
-*.tfvars
-.terraform/
+terraform/*.tfstate
+terraform/*.tfstate.*.backup
+terraform/*.tfstate.backup
+terraform/*.tfvars
+terraform/.terraform/
