--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ terraform/*.tfstate.*.backup
 terraform/*.tfstate.backup
 terraform/*.tfvars
 terraform/.terraform/
-terraform/terraform_backup/
+terraform_backup/
