--- a/terraform/prod/terraform.tfvars.example
+++ b/terraform/prod/terraform.tfvars.example
@@ -5,3 +5,5 @@ image_id                 = "fd84f9abj10n8abqs8f0"
 public_key_path          = "yc.pub"
 subnet_id                = "e9bc6g949kntuh0bp9uv"
 service_account_key_file = "key_file.json"
+app_disk_image           = "fd8844dstum65khv5shi"
+db_disk_image            = "fd8rejcp5nmmep7r1msr"
