--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 # dynamic inventory
-# inventory = ./inventory.json
-inventory = ./inventory
+inventory = ./inventory.json
+# inventory = ./inventory
 remote_user = ubuntu
 private_key_file = /home/raskin/.ssh/appuser
 host_key_checking = False
