--- a/packer/app.json
+++ b/packer/app.json
@@ -15,8 +15,11 @@
     "provisioners": [
         {
             "type": "shell",
-            "script": "scripts/install_ruby.sh",
-            "execute_command": "sudo {{.Path}}"
+            "inline":  ["sleep 60"]
+        },
+        {
+           "type": "ansible",
+           "playbook_file": "ansible/packer_app.yml"
         }
     ]
 }
