--- a/ansible/db.yml
+++ b/ansible/db.yml
@@ -1,18 +1,17 @@
 ---
-- name: Configure hosts & deploy application
-  hosts: all
+- name: Configure MongoDB
+  hosts: db
+  become: true
   vars:
     mongo_bind_ip: 0.0.0.0
   tasks:
     - name: Change mongo config file
-      become: true
       template:
         src: templates/mongod.conf.j2
         dest: /etc/mongodb.conf
         mode: 0644
-      tags: db-tag
       notify: restart mongodb
+
   handlers:
     - name: restart mongodb
-      become: true
       service: name=mongodb state=restarted
