--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -1,5 +1,5 @@
 {
       "folder_id": "b1gtppfap19rcjbm2f9r",
-      "sa_key_file": "./key.json",
+      "sa_key_file": "key.json",
       "source_image_id": "reddit-mini"
 }
