--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,8 +1,18 @@
 [defaults]
 # dynamic inventory
-inventory = ./inventory.json
-# inventory = ./inventory
+# inventory = ./inventory.json
+inventory = ./environments/stage/inventory
 remote_user = ubuntu
 private_key_file = /home/raskin/.ssh/appuser
+# Отключим проверку SSH Host-keys (поскольку они всегда разные для новых инстансов)
 host_key_checking = False
+# Отключим создание retry-файлов
 retry_files_enabled = False
+roles_path= ./roles
+# vault_password_file = ~/.ansible/vault.key
+vauil_password_file = ./vault.key
+
+[diff]
+# Включим обязательный вывод diff при наличии изменений и вывод 5 строк контекста
+always = True
+contex = 5
