--- a/ansible/playbooks/deploy.yml
+++ b/ansible/playbooks/deploy.yml
@@ -1,33 +1,34 @@
 ---
 - name: Deploy App
   hosts: app
+  become: true
   tasks:
     - name: Fetch the latest version of application code
       git:
         repo: 'https://github.com/express42/reddit.git'
         dest: /home/ubuntu/reddit
         version: monolith
-      notify: restart puma
-
-    - name: bundle install
-      shell:
-        cmd: bundle install
-        chdir: /home/ubuntu/reddit/
-      notify: restart puma
+        clone: yes
+      notify: reload puma
 
 #    - name: bundle install
-#      bundler:
-#        state: present
-#        chdir: /home/ubuntu/reddit
+#      shell:
+#        cmd: bundle install
+#        chdir: /home/ubuntu/reddit/
+#      notify: reload puma
 
-#    - name: Start Puma
-#      become: true
-#      systemd:
-#        name: puma
-#        state: started
-#        enabled: yes
+    - name: bundle install
+      bundler:
+        state: present
+        chdir: /home/ubuntu/reddit
+
+    - name: Start Puma
+      systemd:
+        name: puma
+        state: started
+        enabled: yes
 
   handlers:
-    - name: restart puma
+    - name: reload puma
       become: true
       systemd: name=puma state=restarted
